add chart type labelling interface

--- a/notebooks/labelOptions.ipynb
+++ b/notebooks/labelOptions.ipynb
@@ -79,6 +79,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Restore Labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if os.path.isfile(label_dir/'labels.json'):\n",
+    "#     labels = json_util.loads(open(label_dir/'labels.json').read())\n",
+    "# vislabels.insert_many(labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Label Statistic"
    ]
   },
