--- a/notebooks/images_convert.ipynb
+++ b/notebooks/images_convert.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "# !python3 -m pip install pyppeteer\n",
-    "# !apt install libxrender1 libxtst6 libxi6 libatk-bridge2.0-0 libgtk-3-0\n",
+    "# !apt install -y libxrender1 libxtst6 libxi6 libatk-bridge2.0-0 libgtk-3-0\n",
     "\n",
     "# !pip install ffmpy\n",
     "\n",
@@ -70,6 +70,17 @@
    "outputs": [],
    "source": [
     "from pyppeteer import launch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Debug pyppeteer\n",
+    "# from pyppeteer.launcher import Launcher\n",
+    "# ' '.join(Launcher().cmd)"
    ]
   },
   {
