--- a/notebooks/images_thumbnail.ipynb
+++ b/notebooks/images_thumbnail.ipynb
@@ -52,8 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rebuild_images = True\n",
-    "rebuild_images = False"
+    "rebuild_images = True\n",
+    "# rebuild_images = False"
    ]
   },
   {
